syntax = "proto3";

package dummy;

option java_package = "com.proto.dummy";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetingRequest) returns (GreetingResponse) {};
}
